# lambdac

./: .gitignore  README.md  cabal.project  cabal.project.local  hie.yaml  lambdac.cabal  shell.nix  test.ll
app/: Main.hs
dist-newstyle/cache/: config
llvm/: app_2.ll
src/: Lambdac.hs
src/Lambdac/: Codegen.hs  Combinators.hs  Examples.hs  Interpreter.hs  Parser.hs  Printer.hs  Syntax.hs  Typechecker.hs
src/Lambdac/Example/: Abs.hs  App.hs  Var.hs
src/Lambdac/Helper/: DTree.hs
src/Lambdac/Print/: HTree.hs  Repr.hs  Show.hs  VTree.hs
test/: Interpreter.hs  Main.hs  Parser.hs  Quickcheck.hs  Spec.hs  Typechecker.hs  examples.md
test/Print/: HTree.hs  Repr.hs  Show.hs  VTree.hs
test/Spec/: Codegen.hs  Interpreter.hs  Parser.hs  Printer.hs  Quickcheck.hs  Typechecker.hs
test/Spec/Print/: HTree.hs  Repr.hs  Show.hs  VTree.hs
