cabal-version: 2.4
name:          lambdac
version:       0.1.0.0
author:        vglfr
maintainer:    vf.velt@gmail.com

common common
  build-depends:    
      base          == 4.15.*
    , bytestring    == 0.10.*
    , llvm-hs       == 12.0.*
    , llvm-hs-pure  == 12.0.*
    , mtl           == 2.2.*
    , parsec        == 3.1.*
    , process       == 1.6.*
    -- , terminal-size == 0.3.*
  default-language:
    Haskell2010

library
  import:
    common
  exposed-modules:
    Lambdac
    -- Lambdac.Codegen
    Lambdac.Combinators
    Lambdac.Examples
    Lambdac.Interpreter
    Lambdac.Parser
    Lambdac.Printer
    Lambdac.Syntax
    Lambdac.Typechecker
  hs-source-dirs:
    src

executable lc
  import:
    common
  build-depends:
    lambdac
  hs-source-dirs:
    app
  main-is:          
    Main.hs

test-suite lambdac-test
  import:
    common
  build-depends:
      lambdac
    , hspec      == 2.8.*
    , QuickCheck == 2.14.*
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Paths_lambdac
    Spec.Interpreter
    Spec.Parser
    Spec.Printer
    Spec.Quickcheck
  type:
    exitcode-stdio-1.0
