cabal-version: 3.8
name:          lambdac
version:       0.0.1.0
author:        vglfr
maintainer:    vf.velt@gmail.com

common common
  build-depends:    
      base          == 4.16.*
    , bytestring    == 0.11.*
    , extra         == 1.7.*
    , mtl           == 2.2.*
    , parsec        == 3.1.*
  default-language:
    GHC2021

library
  import:
    common
  exposed-modules:
    Lambdac.Combinators
    Lambdac.Example.Abs
    Lambdac.Example.App
    Lambdac.Example.Var
    Lambdac.Helper.DTree
    Lambdac.Interpreter
    Lambdac.Parser
    Lambdac.Print.HTree
    Lambdac.Print.Repr
    Lambdac.Print.Show
    Lambdac.Print.VTree
    Lambdac.Syntax
    Lambdac.Typechecker
  hs-source-dirs:
    src

executable lc
  import:
    common
  build-depends:
    lambdac
  hs-source-dirs:
    app
  main-is:          
    Main.hs

test-suite lambdac-test
  import:
    common
  build-depends:
      lambdac
    , hspec      == 2.8.*
    , QuickCheck == 2.14.*
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Paths_lambdac
    Interpreter
    Parser
    Print.HTree
    Print.Repr
    Print.Show
    Print.VTree
    Typechecker
    Quickcheck
  type:
    exitcode-stdio-1.0
